@@ -34,7 +34,6 @@ import ch.fhir.epr.adapter.data.dto.HumanNameDTO;
 import ch.fhir.epr.adapter.data.dto.MedicalProblemDTO;
 import ch.fhir.epr.adapter.data.dto.ValueDTO;
 import java.time.LocalDate;
-import java.time.LocalDateTime;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -54,26 +53,26 @@ class MedicalProblemServiceTest extends AbstractServiceTest {
 
     ValueDTO illnessCode = new ValueDTO("123456789", "987654321", "testsystem");
     ValueDTO clinicalStatus = new ValueDTO("clinicalStatus", "clinicalStatus", "testsystem");
-    ValueDTO verficationStatus = new ValueDTO("verficationStatus", "verficationStatus", "testsystem");
+    ValueDTO verificationStatus = new ValueDTO("verificationStatus", "verificationStatus", "testsystem");
     String commentText = "BlaBla";
     CommentDTO comment = new CommentDTO(null, recorder.getFullName(), commentText);
-    MedicalProblemDTO dto = new MedicalProblemDTO(null, illnessCode, clinicalStatus, verficationStatus,
-        LocalDate.now(), LocalDate.of(2000, 1, 1), LocalDate.of(2001, 12, 31), recorder, List.of(comment),
+    MedicalProblemDTO dto = new MedicalProblemDTO(null, illnessCode, clinicalStatus, verificationStatus,
+        LocalDate.now(), LocalDate.of(2000, 1, 1), LocalDate.of(2001, 12, 31), recorder, comment,
         "My organization AG");
 
     MedicalProblemDTO result = medicalProblemService.create(EPDCommunity.EPDPLAYGROUND.name(), "1.2.3.4.123456.1",
-        "waldspital-Id-1234", dto, null);
+        "waldspital-Id-1234", dto, null, false);
     assertThat(result.getCode().getCode()).isEqualTo(illnessCode.getCode());
     assertThat(result.getClinicalStatus()).isEqualTo(clinicalStatus);
-    assertThat(result.getVerificationStatus()).isEqualTo(verficationStatus);
+    assertThat(result.getVerificationStatus()).isEqualTo(verificationStatus);
     assertThat(result.getBegin()).isEqualTo(LocalDate.of(2000, 1, 1));
     assertThat(result.getEnd()).isEqualTo(LocalDate.of(2001, 12, 31));
     assertThat(result.getConfidentiality().getCode()).isEqualTo(HuskyUtils.DEFAULT_CONFIDENTIALITY_CODE.getCode());
     assertThat(result.getConfidentiality().getName()).isEqualTo(HuskyUtils.DEFAULT_CONFIDENTIALITY_CODE.getName());
     assertThat(result.getConfidentiality().getSystem()).isEqualTo(FhirConstants.SNOMED_SYSTEM_URL);
-    assertThat(result.getComments().get(0).getAuthor()).isEqualTo(author.getUser().getFullName());
-    assertThat(result.getComments().get(0).getText()).isEqualTo(commentText);
-    assertThat(result.getComments().get(0).getDate()).isNotNull();
+    assertThat(result.getComment().getAuthor()).isEqualTo(author.getUser().getFullName());
+    assertThat(result.getComment().getText()).isEqualTo(commentText);
+    assertThat(result.getComment().getDate()).isNotNull();
     assertThat(result.isValidated()).isTrue();
   }
 
@@ -86,7 +85,7 @@ class MedicalProblemServiceTest extends AbstractServiceTest {
 
     List<MedicalProblemDTO> dtos = medicalProblemService.getAll(patientIdentifier, null, true);
     assertThat(dtos.size()).isEqualTo(1);
-    assertThat(dtos.get(0).getId()).isEqualTo("30327ea1-6893-4c65-896e-c32c394f1ec6");
+    assertThat(dtos.getFirst().getId()).isEqualTo("30327ea1-6893-4c65-896e-c32c394f1ec6");
 
     MedicalProblemDTO result = medicalProblemService.delete(EPDCommunity.EPDPLAYGROUND.name(), "1.2.3.4.123456.1",
         "waldspital-Id-1234", "30327ea1-6893-4c65-896e-c32c394f1ec6", new ValueDTO("1141000195107", "Secret", "url"),
@@ -117,10 +116,10 @@ class MedicalProblemServiceTest extends AbstractServiceTest {
         medicalProblemService.getAll(EPDCommunity.EPDPLAYGROUND.name(), "1.2.3.4.123456.1",
             "waldspital-Id-1234", null);
     assertThat(dtos.size()).isGreaterThan(0);
-    assertThat(dtos.get(0).getClinicalStatus().getCode()).isEqualTo("active");
-    assertThat(dtos.get(0).getVerificationStatus().getCode()).isEqualTo("confirmed");
-    assertThat(dtos.get(0).getId()).isEqualTo("30327ea1-6893-4c65-896e-c32c394f1ec6");
-    assertThat(dtos.get(0).getCode().getCode()).isEqualTo("402196005");
+    assertThat(dtos.getFirst().getClinicalStatus().getCode()).isEqualTo("active");
+    assertThat(dtos.getFirst().getVerificationStatus().getCode()).isEqualTo("confirmed");
+    assertThat(dtos.getFirst().getId()).isEqualTo("30327ea1-6893-4c65-896e-c32c394f1ec6");
+    assertThat(dtos.getFirst().getCode().getCode()).isEqualTo("402196005");
   }
 
   @Test
@@ -136,11 +135,11 @@ class MedicalProblemServiceTest extends AbstractServiceTest {
         medicalProblemService.getAll(EPDCommunity.GAZELLE.name(), "1.3.6.1.4.1.21367.13.20.3000",
             "IHEBLUE-2599", null);
     assertThat(dtos.size()).isEqualTo(1);
-    assertThat(dtos.get(0).getId()).isEqualTo("30327ea1-6893-4c65-896e-c32c394f1ec6");
-    assertThat(dtos.get(0).getCode().getCode()).isEqualTo("402196005");
-    assertThat(dtos.get(0).getClinicalStatus().getCode()).isEqualTo("active");
-    assertThat(dtos.get(0).getVerificationStatus().getCode()).isEqualTo("confirmed");
-    assertThat(dtos.get(0).getJson()).contains("30327ea1-6893-4c65-896e-c32c394f1ec6");
+    assertThat(dtos.getFirst().getId()).isEqualTo("30327ea1-6893-4c65-896e-c32c394f1ec6");
+    assertThat(dtos.getFirst().getCode().getCode()).isEqualTo("402196005");
+    assertThat(dtos.getFirst().getClinicalStatus().getCode()).isEqualTo("active");
+    assertThat(dtos.getFirst().getVerificationStatus().getCode()).isEqualTo("confirmed");
+    assertThat(dtos.getFirst().getJson()).contains("30327ea1-6893-4c65-896e-c32c394f1ec6");
   }
 
   @Override
@@ -157,14 +156,13 @@ class MedicalProblemServiceTest extends AbstractServiceTest {
 
     ValueDTO newIllnessCode = new ValueDTO("newCode", "newCode", "testsystem");
     ValueDTO newClinicalStatus = new ValueDTO("newClinicalStatus", "newClinicalStatus", "testsystem");
-    ValueDTO newVerificationStatus = new ValueDTO("newVerficationStatus", "newVerficationStatus", "testsystem");
+    ValueDTO newVerificationStatus = new ValueDTO("newVerificationStatus", "newVerificationStatus", "testsystem");
     String commentText = "BlaBla";
-    CommentDTO knownComment = new CommentDTO(LocalDateTime.now().minusDays(1), recorder.getFullName(), "test");
     CommentDTO comment = new CommentDTO(null, author.getUser().getFullName(), commentText);
 
     MedicalProblemDTO newDto = new MedicalProblemDTO(null, newIllnessCode, newClinicalStatus,
         newVerificationStatus,
-        LocalDate.now(), LocalDate.of(2000, 1, 1), LocalDate.of(2001, 12, 31), recorder, List.of(knownComment, comment),
+        LocalDate.now(), LocalDate.of(2000, 1, 1), LocalDate.of(2001, 12, 31), recorder, comment,
         "My new organization AG");
     newDto.setAuthor(author);
 
@@ -174,16 +172,44 @@ class MedicalProblemServiceTest extends AbstractServiceTest {
     assertThat(dto.getRelatedId()).isEqualTo("30327ea1-6893-4c65-896e-c32c394f1ec6");
     assertThat(dto.getCode()).isEqualTo(newIllnessCode);
     assertThat(dto.getClinicalStatus()).isEqualTo(newClinicalStatus);
-    assertThat(dto.getVerificationStatus()).isEqualTo(newVerificationStatus);
+    assertThat(dto.getVerificationStatus())
+        .isEqualTo(new ValueDTO("confirmed", "Confirmed", "http://terminology.hl7.org/CodeSystem/condition-ver-status"));
     assertThat(dto.getOrganization()).isEqualTo("My new organization AG");
     assertThat(dto.getBegin()).isEqualTo(LocalDate.of(2000, 1, 1));
     assertThat(dto.getEnd()).isEqualTo(LocalDate.of(2001, 12, 31));
-    assertThat(dto.getComments().get(0).getAuthor()).isEqualTo(author.getUser().getFullName());
-    assertThat(dto.getComments().get(0).getText()).isEqualTo(commentText);
-    assertThat(dto.getComments().get(0).getDate()).isNotNull();
+    assertThat(dto.getComment().getAuthor()).isEqualTo(author.getUser().getFullName());
+    assertThat(dto.getComment().getText()).isEqualTo(commentText);
+    assertThat(dto.getComment().getDate()).isNotNull();
 
     dtos = medicalProblemService.getAll(patientIdentifier, null, true);
     assertThat(dtos.size()).isEqualTo(1);
+  }
+
+  @Test
+  public void testUpdate_authorAsNewHCP_clinicalStatusHasChanged_verificationStatusShouldRemainUnchanged() {
+    PatientIdentifier patientIdentifier =
+        medicalProblemService.getPatientIdentifier(EPDCommunity.EPDPLAYGROUND.name(), "1.2.3.4.123456.1",
+            "waldspital-Id-1234");
+
+    List<MedicalProblemDTO> dtos = medicalProblemService.getAll(patientIdentifier, null, true);
+    assertThat(dtos.size()).isEqualTo(1);
+    assertThat(dtos.getFirst().getAuthor().getRole()).isEqualTo("HCP");
+    assertThat(dtos.getFirst().getVerificationStatus())
+        .isEqualTo(new ValueDTO("confirmed", "Confirmed", "http://terminology.hl7.org/CodeSystem/condition-ver-status"));
+
+    ValueDTO newClinicalStatus = new ValueDTO("newClinicalStatus", "newClinicalStatus", "testsystem");
+
+    MedicalProblemDTO newDto = dtos.getFirst();
+    newDto.setAuthor(author);
+    newDto.setClinicalStatus(newClinicalStatus);
+
+    MedicalProblemDTO dto =
+        medicalProblemService.update(EPDCommunity.EPDPLAYGROUND.name(), "1.2.3.4.123456.1",
+            "waldspital-Id-1234", "30327ea1-6893-4c65-896e-c32c394f1ec6", newDto, null);
+    assertThat(dto.getRelatedId()).isEqualTo("30327ea1-6893-4c65-896e-c32c394f1ec6");
+    assertThat(dto.getClinicalStatus()).isEqualTo(newClinicalStatus);
+    assertThat(dto.getVerificationStatus())
+        .isEqualTo(new ValueDTO("confirmed", "Confirmed", "http://terminology.hl7.org/CodeSystem/condition-ver-status"));
   }
 
   @Override
@@ -192,11 +218,9 @@ class MedicalProblemServiceTest extends AbstractServiceTest {
     HumanNameDTO recorder = new HumanNameDTO("Victor2", "Frankenstein2", "Dr.", null, null);
     ValueDTO newIllnessCode = new ValueDTO("newCode", "newCode", "testsystem");
     ValueDTO newClinicalStatus = new ValueDTO("newClinicalStatus", "newClinicalStatus", "testsystem");
-    ValueDTO newVerificationStatus = new ValueDTO("newVerficationStatus", "newVerficationStatus", "testsystem");
 
-    MedicalProblemDTO newDto = new MedicalProblemDTO(null, newIllnessCode, newClinicalStatus,
-        newVerificationStatus,
-        LocalDate.now(), LocalDate.of(2000, 1, 1), LocalDate.of(2001, 12, 31), recorder, List.of(),
+    MedicalProblemDTO newDto = new MedicalProblemDTO(null, newIllnessCode, newClinicalStatus, null,
+        LocalDate.now(), LocalDate.of(2000, 1, 1), LocalDate.of(2001, 12, 31), recorder, null,
         "My new organization AG");
     newDto.setAuthor(author);
 
@@ -206,7 +230,8 @@ class MedicalProblemServiceTest extends AbstractServiceTest {
     assertThat(dto.getRelatedId()).isEqualTo("30327ea1-6893-4c65-896e-c32c394f1ec6");
     assertThat(dto.getCode()).isEqualTo(newIllnessCode);
     assertThat(dto.getClinicalStatus()).isEqualTo(newClinicalStatus);
-    assertThat(dto.getVerificationStatus()).isEqualTo(newVerificationStatus);
+    assertThat(dto.getVerificationStatus())
+        .isEqualTo(new ValueDTO("confirmed", "Confirmed", "http://terminology.hl7.org/CodeSystem/condition-ver-status"));
     assertThat(dto.getOrganization()).isEqualTo("My new organization AG");
     assertThat(dto.getBegin()).isEqualTo(LocalDate.of(2000, 1, 1));
     assertThat(dto.getEnd()).isEqualTo(LocalDate.of(2001, 12, 31));
